--- a/gleam.toml
+++ b/gleam.toml
@@ -3,6 +3,13 @@ version = "0.8.0"
 licences = ["Apache-2.0"]
 description = "Gleam bindings to Erlang's EUnit test framework"
 
+[javascript.deno]
+allow_read = [
+  "gleam.toml",
+  "test",
+  "build",
+]
+
 [dependencies]
 gleam_stdlib = "~> 0.19"
 
