--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2.0.0
       - uses: erlef/setup-beam@v1.15.1
-      - uses: denoland/setup-deno@v1
         with:
           otp-version: "25.1"
           gleam-version: "0.25.2"
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
       - run: gleam format --check src test
 
       - run: gleam test --target erlang
