--- a/gleam.toml
+++ b/gleam.toml
@@ -5,9 +5,11 @@ description = "Gleam bindings to Erlang's EUnit test framework. This is a fork o
 
 [javascript.deno]
 allow_read = [
-  "gleam.toml",
-  "test",
-  "build",
+	"./",
+  "./build",
+  "./gleam.toml",
+  "./src",
+  "./test",
 ]
 
 [dependencies]
@@ -15,3 +17,4 @@ gleam_stdlib = "~> 0.19"
 
 [dev-dependencies]
 # some_test_package = "~> 1.0.0"
+
