--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,5 @@
 name = "glacier_gleeunit"
-version = "0.10.1"
+version = "0.10.2"
 licences = ["Apache-2.0"]
 description = "Gleam bindings to Erlang's EUnit test framework. This is a fork of Gleeunit that allows it to be called as a library/function with a list of test modules instead of just via CLI."
 
@@ -14,6 +14,7 @@ allow_read = [
 
 [dependencies]
 gleam_stdlib = "~> 0.26"
+gleam_erlang = "~> 0.17"
 
 [dev-dependencies]
 # some_test_package = "~> 1.0.0"
