--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,6 @@
 name = "glacier_gleeunit"
-version = "0.11.10" # If not on par with gleeunit then the bugfix release is by 0.0.10 version numbers increased beyond gleeunits version number
+version = "0.11.20" # If not on par with gleeunit then the bugfix release is by 0.0.10 version numbers increased beyond gleeunits version number
+gleam = ">= 0.30.0"
 licences = ["Apache-2.0"]
 description = "Gleam bindings to Erlang's EUnit test framework. This is a fork of Gleeunit that allows it to be called as a library/function with a list of test modules instead of just via CLI."
 
