--- a/gleam.toml
+++ b/gleam.toml
@@ -3,6 +3,10 @@ version = "1.0.2"
 licences = ["Apache-2.0"]
 description = "Gleam bindings to Erlang's EUnit test framework"
 gleam = ">= 0.33.0"
+repository = { type = "github", user = "gleam-lang", repo = "gleeunit" }
+links = [
+  { title = "Sponsor", href = "https://github.com/sponsors/lpil" },
+]
 
 [javascript.deno]
 allow_read = [
