--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: erlef/setup-beam@v1
         with:
           otp-version: "25.1"
-          gleam-version: "nightly"
+          gleam-version: "1.0.0"
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
