--- a/gleam.toml
+++ b/gleam.toml
@@ -2,12 +2,13 @@ name = "gleeunit"
 version = "1.1.3"
 licences = ["Apache-2.0"]
 description = "Gleam bindings to Erlang's EUnit test framework"
-gleam = ">= 0.33.0"
 repository = { type = "github", user = "lpil", repo = "gleeunit" }
 links = [{ title = "Sponsor", href = "https://github.com/sponsors/lpil" }]
+
+gleam = ">= 0.33.0"
 
 [javascript.deno]
 allow_read = ["gleam.toml", "test", "build"]
 
 [dependencies]
-gleam_stdlib = ">= 0.32"
+gleam_stdlib = ">= 0.33.0 and < 2.0.0"
