--- a/gleam.toml
+++ b/gleam.toml
@@ -2,28 +2,24 @@ name = "glacier_gleeunit"
 # glacier_gleeunit appends versions to the bugfix version of gleeunit if it can.
 # 1.1.2 becomes 1.1.2001, 1.1.2002 etc. until there is gleeunit 1.1.3 which
 # means the version will be 1.1.3001, 1.1.3002 etc.
-version = "1.1.2001"
+version = "1.2.0001"
 licences = ["Apache-2.0"]
 description = "This is a fork of gleeunit that allows it to be called as a library/function with a list of test modules instead of just via CLI."
-gleam = "~> 1.0"
+gleam = ">= 1.0.0"
 repository = { type = "github", user = "inoas", repo = "gleeunit" }
 links = [
   { title = "Sponsor Gleeunit", href = "https://github.com/sponsors/lpil" },
 ]
 
 [javascript.deno]
-allow_read = [
-  "gleam.toml",
-  "test",
-  "build",
-]
+allow_read = ["gleam.toml", "test", "build"]
 
 [dependencies]
 argv = "~> 1.0"
-gleam_stdlib = ">= 0.36.0 and < 2.0.0"
+gleam_stdlib = ">= 0.33.0 and < 2.0.0"
 
 [documentation]
 pages = [
-	{ title = "Changelog", path = "changelog.html", source = "CHANGELOG.md" },
-	{ title = "Licence", path = "licence.html", source = "LICENCE" },
+  { title = "Changelog", path = "changelog.html", source = "CHANGELOG.md" },
+  { title = "Licence", path = "licence.html", source = "LICENCE" },
 ]
