Improved test output

--- a/gleam.toml
+++ b/gleam.toml
@@ -11,3 +11,6 @@ allow_read = ["gleam.toml", "test", "build"]
 
 [dependencies]
 gleam_stdlib = ">= 0.60.0 and < 2.0.0"
+
+[dev-dependencies]
+testhelper = { "path" = "./testhelper" }
